src/main/java/com/example/tokenauth/errors/LoginFailException.java
package com.example.tokenauth.errors;

public class LoginFailException extends RuntimeException{
    public LoginFailException(String email) {
        super(email);
    }
}
